--- a/add-update/css/view.css
+++ b/add-update/css/view.css
@@ -1,6 +1,5 @@
 body
 {
-	background:#fffff;
 	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
 	font-size:small;
 	margin:8px 0 16px;
@@ -9,7 +8,6 @@ body
 
 #form_container
 {
-	background:#fff;
 	border:1px solid #ccc;
 	margin:0 auto;
 	text-align:left;
@@ -29,7 +27,7 @@ body
 {
 	display:block;
 	height:10px;
-	margin:0 auto;
+	margin: auto;
 	width:650px;
 }
 
@@ -44,16 +42,13 @@ h1
 {
 	background-color:#dedede;
 	margin:0;
-	min-height:0;
-	padding:0;
-	text-decoration:none;
 	text-indent:-8000px;
-	
+
 }
 
 h1 a
 {
-	
+
 	display:block;
 	height:100%;
 	min-height:40px;
@@ -66,7 +61,6 @@ h1 a
 /**** Form Section ****/
 .appnitro
 {
-	font-family:Lucida Grande, Tahoma, Arial, Verdana, sans-serif;
 	font-size:small;
 }
 
@@ -171,11 +165,6 @@ form li div.right .medium
 	width:100%;
 }
 
-.clear
-{
-	clear:both;
-}
-
 form li div label
 {
 	clear:both;
@@ -196,16 +185,6 @@ form li span label
 	line-height:9px;
 	margin:0;
 	padding-top:3px;
-}
-
-form li .datepicker
-{
-	cursor:pointer !important;
-	float:left;
-	height:16px;
-	margin:.1em 5px 0 0;
-	padding:0;
-	width:16px;
 }
 
 .form_description
@@ -241,38 +220,6 @@ form hr
 	display:none;
 }
 
-form li.section_break
-{
-	border-top:1px dotted #ccc;
-	margin-top:9px;
-	padding-bottom:0;
-	padding-left:9px;
-	padding-top:13px;
-	width:97% !important;
-}
-
-form ul li.first
-{
-	border-top:none !important;
-	margin-top:0 !important;
-	padding-top:0 !important;
-}
-
-form .section_break h3
-{
-	font-size:110%;
-	font-weight:400;
-	line-height:130%;
-	margin:0 0 2px;
-}
-
-form .section_break p
-{
-	font-size:85%;
-
-	margin:0 0 10px;
-}
-
 /**** Buttons ****/
 input.button_text
 {
@@ -299,15 +246,9 @@ label.description
 	padding:0 0 1px;
 }
 
-span.symbol
-{
-	font-size:115%;
-	line-height:130%;
-}
-
 input.text
 {
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
+	background:#fff url(../images/shadow.gif) repeat-x top;
 	border-bottom:1px solid #ddd;
 	border-left:1px solid #c3c3c3;
 	border-right:1px solid #c3c3c3;
@@ -316,28 +257,6 @@ input.text
 	font-size:100%;
 	margin:0;
 	padding:2px 0;
-}
-
-input.file
-{
-	color:#333;
-	font-size:100%;
-	margin:0;
-	padding:2px 0;
-}
-
-textarea.textarea
-{
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
-	border-bottom:1px solid #ddd;
-	border-left:1px solid #c3c3c3;
-	border-right:1px solid #c3c3c3;
-	border-top:1px solid #7c7c7c;
-	color:#333;
-	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
-	font-size:100%;
-	margin:0;
-	width:99%;
 }
 
 select.select
@@ -346,63 +265,17 @@ select.select
 	font-size:100%;
 	margin:1px 0;
 	padding:1px 0 0;
-	background:#fff url(../../../images/shadow.gif) repeat-x top;
+	background:#fff url(../images/shadow.gif) repeat-x top;
 	border-bottom:1px solid #ddd;
 	border-left:1px solid #c3c3c3;
 	border-right:1px solid #c3c3c3;
 	border-top:1px solid #7c7c7c;
 }
 
-
-input.currency
-{
-	text-align:right;
-}
-
-input.checkbox
-{
-	display:block;
-	height:13px;
-	line-height:1.4em;
-	margin:6px 0 0 3px;
-	width:13px;
-}
-
-input.radio
-{
-	display:block;
-	height:13px;
-	line-height:1.4em;
-	margin:6px 0 0 3px;
-	width:13px;
-}
-
-label.choice
-{
-	color:#444;
-	display:block;
-	font-size:100%;
-	line-height:1.4em;
-	margin:-1.55em 0 0 25px;
-	padding:4px 0 5px;
-	width:90%;
-}
-
 select.select[class]
 {
 	margin:0;
 	padding:1px 0;
-}
-
-*:first-child+html select.select[class]
-{
-	margin:1px 0;
-}
-
-.safari select.select
-{
-	font-size:120% !important;
-	margin-bottom:1px;
 }
 
 input.small
@@ -435,97 +308,18 @@ select.large
 	width:100%;
 }
 
-textarea.small
-{
-	height:5.5em;
+#id {
+	opacity: 0.7;
+	background-color: #D3D3D3;
 }
 
-textarea.medium
-{
-	height:10em;
-}
-
-textarea.large
-{
-	height:20em;
-}
-
-/**** Errors ****/
-#error_message
-{
-	background:#fff;
-	border:1px dotted red;
-	margin-bottom:1em;
-	padding-left:0;
-	padding-right:0;
-	padding-top:4px;
-	text-align:center;
-	width:99%;
-}
-
-#error_message_title
-{
-	color:#DF0000;
-	font-size:125%;
-	margin:7px 0 5px;
-	padding:0;
-}
-
-#error_message_desc
-{
-	color:#000;
-	font-size:100%;
-	margin:0 0 .8em;
-}
-
-#error_message_desc strong
-{
-	background-color:#FFDFDF;
-	color:red;
-	padding:2px 3px;
-}
-
-form li.error
-{
-	background-color:#FFDFDF !important;
-	border-bottom:1px solid #EACBCC;
-	border-right:1px solid #EACBCC;
-	margin:3px 0;
-}
-
-form li.error label
-{
-	color:#DF0000 !important;
-}
-
-form p.error
-{
-	clear:both;
-	color:red;
-	font-size:10px;
-	font-weight:700;
-	margin:0 0 5px;
-}
-
-form .required
-{
-	color:red;
-	float:none;
-	font-weight:700;
-}
-
-/**** Guidelines and Error Highlight ****/
-form li.highlighted
-{
-	background-color:#fff7c0;
-}
-
+/**** Guidelines ****/
 form .guidelines
 {
 	background:#f5f5f5;
 	border:1px solid #e6e6e6;
 	color:#444;
-	font-size:80%;
+	font-size:105%;
 	left:100%;
 	line-height:130%;
 	margin:0 0 0 8px;
@@ -537,55 +331,7 @@ form .guidelines
 	z-index:1000;
 }
 
-form .guidelines small
-{
-	font-size:105%;
-}
-
-form li.highlighted .guidelines
-{
-	visibility:visible;
-}
-
 form li:hover .guidelines
 {
 	visibility:visible;
 }
-
-.no_guidelines .guidelines
-{
-	display:none !important;
-}
-
-.no_guidelines form li
-{
-	width:97%;
-}
-
-.no_guidelines li.section
-{
-	padding-left:9px;
-}
-
-/*** Success Message ****/
-.form_success 
-{
-	clear: both;
-	margin: 0;
-	padding: 90px 0pt 100px;
-	text-align: center
-}
-
-.form_success h2 {
-    clear:left;
-    font-size:160%;
-    font-weight:normal;
-    margin:0pt 0pt 3px;
-}
-
-
-
-
-
-
-
