--- a/home/css/superStyle.css
+++ b/home/css/superStyle.css
@@ -1,8 +1,7 @@
 body {
-	background-image: url("images/B5.jpg");
+	background-image: url("../images/B5.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	overflow: hidden;
 }
 
 h2{
@@ -20,16 +19,16 @@ h2{
 #big{
 	height: 355px;
 	width: 800px;
-	
+
 	float: left;
 	margin-left: 50px;
 	margin-top: 85px;
-	
-	
-	background-image: url("images/pic07.jpg");
+
+
+	background-image: url("../images/pic07.jpg");
 	background-size:cover;
-	background-repeat: repeat;	
-		
+	background-repeat: repeat;
+
 	border-style: inset;
    	border-width: 5px;
    	border-color: #cccccc;
@@ -39,45 +38,72 @@ h2{
 #bigP{
 	font-size: 40px;
 	color: #BBD6CD;
+	position: fixed;
+	margin-left: 10px;
 }
 
 #big:hover{
-	transform: scale(1.007);	
+	transform: scale(1.007);
 }
 
 /* Big Ends Here */
 /* Tall Starts Here */
 
-#tall{
-	height: 355px;
-	width: 275px;
-	
+#rightTop{
+	height: 170px;
+	width: 295px;
+
 	float: right;
 	position: absolute;
-	left: 870px;
-	top: 93px;
-	
-	background-image: url("images/pic05.jpg");
+	margin-left: 865px;
+	margin-top: 85px;
+
+	background-image: url("../images/pic05.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	
+
 	color: #BBD6CD;
-	
+
 	box-shadow: 0 0px 0px 0 #BFBFBF;
-	
+
 	border-style: inset;
    	border-width: 5px;
    	border-color: #cccccc;
    	border-radius: 5px;
 }
 
-#tallP{
-	font-size: 24px;
-	margin-top: 304px;
-	margin-left: 10px;
+#rightBottom{
+	height: 170px;
+	width: 295px;
+
+	float: right;
+	position: absolute;
+	margin-left: 865px;
+	margin-top: 270px;
+
+	background-image: url("../images/pic05.jpg");
+	background-size:cover;
+	background-repeat: repeat;
+
+	color: #BBD6CD;
+
+	box-shadow: 0 0px 0px 0 #BFBFBF;
+
+	border-style: inset;
+   	border-width: 5px;
+   	border-color: #cccccc;
+   	border-radius: 5px;
 }
 
-#tall:hover{
+
+#tallP{
+	font-size: 24px;
+	margin-top: 10px;
+	margin-left: 95px;
+	position: fixed;
+}
+
+#rightTop:hover, #rightBottom:hover{
 	transform: scale(1.01);
 }
 
@@ -85,29 +111,31 @@ h2{
 /* Left Starts Here */
 
 #left{
-	width: 280px;
+	width: 172.5px;
 	height: 106px;
-	
+
 	float: left;
+	position: absolute;
 	margin-left: 50px;
-	box-sizing: border-box;
-	
-	background-image: url("images/pic05.jpg");
+	margin-top: 455px;
+
+	background-image: url("../images/pic05.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	
+
 	box-shadow: 0 0 0px 0px #888888;
 	border-style: inset;
    	border-width: 5px;
    	border-color: #cccccc;
-   	border-radius: 5px;  
+   	border-radius: 5px;
 }
 
 #leftP{
 	font-size: 20px;
 	margin-top: 50px;
-	margin-left: 15px;
+	margin-left: 5px;
 	color: #BBD6CD;
+	position: fixed;
 }
 
 #left:hover{
@@ -115,49 +143,22 @@ h2{
 }
 
 /* Left Ends Here */
-/* Right1 Starts Here */
+/* Right Starts Here */
 
-#sub1{
-	width: 163px;
+#right{
+	width: 172.5px;
 	height: 106px;
-	
+
 	float: left;
-	box-sizing: border-box;
-	
-    background-image: url("images/pic02.jpg");
-	background-size: cover;
-	background-repeat: repeat;
-	
-	box-shadow: 0 0px 0px 0 #888888;
-	border-style: inset;
-   	border-width: 5px;
- 	border-color: #cccccc;
-   	border-radius: 5px;
-}
+	position: absolute;
+	margin-left: 237.5px;
+	margin-top: 455px;
 
-#subP1{
-	font-size: 20px;
-	margin-top: 30px;
-	margin-left: 15px;
-	color: #BBD6CD;
-}
 
-#sub1:hover{
-	transform: scale(1.015);}
-
-/* Right1 Ends Here */
-/* Right2 Starts Here */
-#sub2{
-	width: 163px;
-	height: 106px;
-	
-	float: left;
-	box-sizing: border-box;	
-	
-    background-image: url("images/pic05.jpg");
+    background-image: url("../images/pic02.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	
+
 	box-shadow: 0 0px 0px 0 #888888;
 	border-style: inset;
    	border-width: 5px;
@@ -165,93 +166,69 @@ h2{
    	border-radius: 5px;
 }
 
-#subP2{
-	font-size: 20px;
-	margin-top: 30px;
-	margin-left: 15px;
+#rightP{
+	font-size: 17px;
+	margin-top: 50px;
+	margin-left: 5px;
 	color: #BBD6CD;
+	position: fixed;
 }
 
-#sub2:hover{
+#right:hover{
 	transform: scale(1.015);}
 
-/* Right2 Ends Here */
-/* Right3 Starts Here */
-#sub3{
-	width: 163px;
-	height: 106px;
-	
-	float: left;
-	box-sizing: border-box;	
-	
-    background-image: url("images/pic02.jpg");
-	background-size:cover;
-	background-repeat: repeat;
-	
-	box-shadow: 0 0px 0px 0 #888888;
-	border-style: inset;
-   	border-width: 5px;
- 	border-color: #cccccc;
-   	border-radius: 5px;
-}
-
-#subP3{
-	font-size: 20px;
-	margin-top: 30px;
-	margin-left: 15px;
-	color: #BBD6CD;
-}
-
-#sub3:hover{
-	transform: scale(1.015);}
-/* Right3 Ends Here */
-
-
+/* Right Ends Here */
 /* aLeft Starts Here */
 
-#sub4{
-	width: 163px;
+#aleft{
+	width: 172.5px;
 	height: 106px;
-	
+
 	float: left;
-	box-sizing: border-box;
-	
-	background-image: url("images/pic05.jpg");
+	position: absolute;
+	margin-left: 425px;
+	margin-top: 455px;
+
+	background-image: url("../images/pic05.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	
+
 	box-shadow: 0 0 0px 0px #888888;
 	border-style: inset;
    	border-width: 5px;
    	border-color: #cccccc;
-   	border-radius: 5px;  
+   	border-radius: 5px;
 }
 
-#subP4{
+#aleftP{
 	font-size: 20px;
-	margin-top: 30px;
-	margin-left: 15px;
+	margin-top: 50px;
+	margin-left: 5px;
 	color: #BBD6CD;
+	position: fixed;
 }
 
-#sub4:hover{
+#aleft:hover{
 	transform: scale(1.025);
 }
 
 /* aLeft Ends Here */
 /* aRight Starts Here */
 
-#sub5{
-	width: 163px;
+#aright{
+	width: 172.5px;
 	height: 106px;
-	
+
 	float: left;
-	box-sizing: border-box;
-		
-    background-image: url("images/pic02.jpg");
+	position: absolute;
+	margin-left: 612.5px;
+	margin-top: 455px;
+
+
+    background-image: url("../images/pic02.jpg");
 	background-size:cover;
 	background-repeat: repeat;
-	
+
 	box-shadow: 0 0px 0px 0 #888888;
 	border-style: inset;
    	border-width: 5px;
@@ -259,46 +236,96 @@ h2{
    	border-radius: 5px;
 }
 
-#subP5{
+#arightP{
 	font-size: 20px;
-	margin-top: 30px;
-	margin-left: 15px;
+	margin-top: 50px;
+	margin-left: 5px;
 	color: #BBD6CD;
+	position: fixed;
 }
 
-#sub5:hover{
+#aright:hover{
 	transform: scale(1.025);}
-	
-/* aRight Starts Here */
+
+/* aRight Ends Here */
+/* bLeft Starts Here */
+#bleft{
+	width: 172.5px;
+	height: 106px;
+
+	float: left;
+	position: absolute;
+	margin-left: 800px;
+	margin-top: 455px;
+
+	background-image: url("../images/pic05.jpg");
+	background-size:cover;
+	background-repeat: repeat;
+
+	box-shadow: 0 0 0px 0px #888888;
+	border-style: inset;
+   	border-width: 5px;
+   	border-color: #cccccc;
+   	border-radius: 5px;
+}
+
+#bleftP{
+	font-size: 20px;
+	margin-top: 50px;
+	margin-left: 5px;
+	color: #BBD6CD;
+	position: fixed;
+}
+
+#bleft:hover{
+	transform: scale(1.025);
+}
+
+/* bLeft Ends Here */
+/* bRight Starts Here */
+
+#bright{
+	width: 172.5px;
+	height: 106px;
+
+	float: left;
+	position: absolute;
+	margin-left: 987.5px;
+	margin-top: 455px;
+
+
+    background-image: url("../images/pic02.jpg");
+	background-size:cover;
+	background-repeat: repeat;
+
+	box-shadow: 0 0px 0px 0 #888888;
+	border-style: inset;
+   	border-width: 5px;
+ 	border-color: #cccccc;
+   	border-radius: 5px;
+}
+
+#brightP{
+	font-size: 17px;
+	margin-top: 50px;
+	margin-left: 5px;
+	color: #BBD6CD;
+	position: fixed;
+}
+
+#bright:hover{
+	transform: scale(1.025);}
+
+/* bRight Ends Here */
 
 p{
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-weight: bold;
 }
 
-.link {
-    
-    height: 70%;
+a.link {
+    display: block;
+    height: 100%;
     width: 100%;
     text-decoration: none;
-    position: absolute;
-    
 }
-
-.timeEditor{
-	overflow: hidden;
-    width: 100%;
-    height: 100%;
-    zoom: 0.6;
-}
-
-#taskWindow { 
-	height: 355px;
-	width: 800px;
-	left: 20px;
-	bottom 20px;
-
-	}
-	
-
-
