--- a/select/view.css
+++ b/select/view.css
@@ -1,38 +1,69 @@
+body
+{
+	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+	font-size:small;
+	margin:8px 0 16px;
+	text-align:center;
+}
 
-table {
-	max-width:1000px;
-	table-layout:fixed;
-	margin:auto;
+#form_container
+{
+	border:1px solid #ccc;
+	margin:0 auto;
+	text-align:left;
+	width:640px;
 }
-th, td {
-	padding:5px 10px;
-	border:1px solid #000;
-}
-thead, tfoot {
-	background:#f9f9f9;
-	display:table;
-	width:100%;
-  border: 1px solid black;
-  background-color: lightgrey;
-}
-tbody {
-	height:500px;
-	overflow:auto;
-	overflow-x:hidden;
+
+#top
+{
 	display:block;
-	width:100%;
-}
-tbody tr {
-	display:table;
-	width:100%;
-	table-layout:fixed;
-}
-h1 {
-  color: dimgrey;
-  font-family: sans-serif;
-  font-weight: normal;
-  white-space: nowrap;
-  padding: 0.5em 1rem;
-  border-bottom: 1px solid gainsboro;
+	height:10px;
+	margin:10px auto 0;
+	width:650px;
 }
 
+
+#bottom
+{
+	display:block;
+	height:10px;
+	margin: auto;
+	width:650px;
+}
+
+form.appnitro
+{
+	margin:20px 20px 0;
+	padding:0 0 20px;
+}
+
+/**** Logo Section  *****/
+h1
+{
+	background-color:#dedede;
+	margin:0;
+	text-indent:-8000px;
+
+}
+
+h1 a
+{
+
+	display:block;
+	height:100%;
+	min-height:40px;
+	overflow:hidden;
+}
+
+.appnitro
+{
+	font-size:small;
+}
+
+.form_description h2
+{
+	clear:left;
+	font-size:160%;
+	font-weight:400;
+	margin:0 0 3px;
+}
